Mise en forme de la page menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -35,8 +35,10 @@
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
                         </div>
-                        <span class="menu__card-text">Aux zests d'orange</span>
-                        <span class="menu__card-price">25€</span>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
                     </div>
                     <menu__card-animation></menu__card-animation>
                 </div>
@@ -45,8 +47,10 @@
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
                         </div>
-                        <span class="menu__card-text">Aux zests d'orange</span>
-                        <span class="menu__card-price">25€</span>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
                     </div>
                     <menu__card-animation></menu__card-animation>
                 </div>
@@ -55,84 +59,98 @@
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
                         </div>
-                        <span class="menu__card-text">Aux zests d'orange</span>
-                        <span class="menu__card-price">25€</span>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
                     </div>
                     <menu__card-animation></menu__card-animation>
                 </div>
 
             </div>
 
-<!-- colonne 2 -->
-<div class="menu__column">
-    <h3>ENTREES</h3>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
-            </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
-            </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
-            </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
+            <!-- colonne 2 -->
+            <div class="menu__column">
+                <h3>ENTREES</h3>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
 
-</div>
-<!--colonne 3-->
-<div class="menu__column">
-    <h3>ENTREES</h3>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
             </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
-            </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
-    <div class="menu__card">
-        <div class="menu__card-container">
-            <div class="menu__card-title">
-                <h4>Tartare de poulpes acidulé</h4>
-            </div>
-            <span class="menu__card-text">Aux zests d'orange</span>
-            <span class="menu__card-price">25€</span>
-        </div>
-        <menu__card-animation></menu__card-animation>
-    </div>
+            <!--colonne 3-->
+            <div class="menu__column">
+                <h3>ENTREES</h3>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <div class="menu__card-footer">
+                            <span class="menu__card-text">Aux zests d'orange</span>
+                            <span class="menu__card-price">25€</span>
+                        </div>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
 
-</div>
+            </div>
 
         </div>
     </main>
