Ajout liens footer

--- a/menu_1.html
+++ b/menu_1.html
@@ -40,7 +40,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -153,16 +153,31 @@
             </div>
 
         </div>
+        <div class="command">
+            <a href="#">
+                <div class="reservation__button">
+                    <p>Commander</p>
+                </div>
+            </a>
+        </div>
     </main>
     <footer>
         <div class="content">
             <div class="footer__bloc">
                 <h3 class="footer__title">ohmyfood</h3>
                 <ul>
-                    <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-                    <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
-                    <li>Mention légales</li>
-                    <li>Contact</li>
+                    <a href="#">
+                        <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+                    </a>
+                    <a href="#">
+                        <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
+                    </a>
+                    <a href="#">
+                        <li>Mention légales</li>
+                    </a>
+                    <a href="#">
+                        <li>Contact</li>
+                    </a>
                 </ul>
             </div>
         </div>
