Animation menu hover

--- a/menu_1.html
+++ b/menu_1.html
@@ -71,7 +71,7 @@
 
             <!-- colonne 2 -->
             <div class="menu__column">
-                <h3>ENTREES</h3>
+                <h3>PLATS</h3>
                 <div class="menu__card">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
@@ -112,7 +112,7 @@
             </div>
             <!--colonne 3-->
             <div class="menu__column">
-                <h3>ENTREES</h3>
+                <h3>DESSERTS</h3>
                 <div class="menu__card">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
