Correction mouvement animations menu

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     <P>Menilmontant</P>
                                 </a>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
+                            <div class="restaurant__card-icon"><img src="./assets/img/icons/heart-regular.svg" alt="Heart"></div>
                         </div>
                     </div>
                     <div class="restaurant__card">
