--- a/menu_1.html
+++ b/menu_1.html
@@ -52,7 +52,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -64,14 +64,13 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-
             </div>
 
             <!-- colonne 2 -->
             <div class="menu__column">
-                <h3>PLATS</h3>
+                <h3>ENTREES</h3>
                 <div class="menu__card">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
@@ -82,7 +81,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -94,7 +93,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -106,13 +105,12 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-
             </div>
             <!--colonne 3-->
             <div class="menu__column">
-                <h3>DESSERTS</h3>
+                <h3>ENTREES</h3>
                 <div class="menu__card">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
@@ -123,7 +121,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -135,7 +133,7 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
                 <div class="menu__card">
                     <div class="menu__card-container">
@@ -147,9 +145,8 @@
                             <span class="menu__card-price">25€</span>
                         </div>
                     </div>
-                    <menu__card-animation></menu__card-animation>
+                    <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-
             </div>
 
         </div>
