Correction animation menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -28,9 +28,9 @@
             <span class="menu__header-fav"><i class="far fa-heart"></i></span>
         </div>
         <div class="menu__container content">
-            <div class="menu__column anim-1">
+            <div class="menu__column">
                 <h3>ENTREES</h3>
-                <div class="menu__card">
+                <div class="menu__card anim-1">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-2">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-3">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -69,9 +69,9 @@
             </div>
 
             <!-- colonne 2 -->
-            <div class="menu__column anim-2">
+            <div class="menu__column">
                 <h3>PLATS</h3>
-                <div class="menu__card">
+                <div class="menu__card anim-4">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-5">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-6">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -109,9 +109,9 @@
                 </div>
             </div>
             <!--colonne 3-->
-            <div class="menu__column anim-3">
+            <div class="menu__column">
                 <h3>DESSERTS</h3>
-                <div class="menu__card">
+                <div class="menu__card anim-7">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-8">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
-                <div class="menu__card">
+                <div class="menu__card anim-9">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
                             <h4>Tartare de poulpes acidulé</h4>
