--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     <P>Menilmontant</P>
                                 </a>
                             </div>
-                            <div class="restaurant__card-icon"><img src="./assets/img/icons/heart-regular.svg" alt="Heart"></div>
+                            <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
                     <div class="restaurant__card">
@@ -94,7 +94,7 @@
                                     <P>Charonne</P>
                                 </a>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
+                            <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
                     <div class="restaurant__card">
@@ -108,7 +108,7 @@
                                     <P>Cité Rouge</P>
                                 </a>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
+                            <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
                     <div class="restaurant__card">
@@ -122,7 +122,7 @@
                                     <P>Folie-Méricourt</P>
                                 </a>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
+                            <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
 
