--- a/menu_1.html
+++ b/menu_1.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header">
-            <div class="return"><i class="fas fa-arrow-left"></i></div>
+            <div class="return"><a href="./index.html"><i class="fas fa-arrow-left"></i></a></div>
             <h1>ohmyfood</h1>
         </div>
     </header>
@@ -25,7 +25,7 @@
         </div>
         <div class="menu__header content padding__20">
             <h2>A la Française </h2>
-            <span class="menu__header-fav"><i class="far fa-heart"></i></span>
+            <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
         <div class="menu__container content">
             <div class="menu__column">
