--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 
 <body>
     <header>
-        <div class="loader">Loading...</div>
+        <div class="background-loader">
+            <div class="loader"><div id="circularG">
+                <div id="circularG_1" class="circularG"></div>
+                <div id="circularG_2" class="circularG"></div>
+                <div id="circularG_3" class="circularG"></div>
+                <div id="circularG_4" class="circularG"></div>
+                <div id="circularG_5" class="circularG"></div>
+                <div id="circularG_6" class="circularG"></div>
+                <div id="circularG_7" class="circularG"></div>
+                <div id="circularG_8" class="circularG"></div>
+            </div></div>
+        </div>
         <div class="header">
             <h1>ohmyfood</h1>
         </div>
@@ -113,7 +124,8 @@
                     </div>
                     <div class="restaurant__card">
                         <a href="#">
-                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant">
+                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
