Correction textes menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -24,7 +24,7 @@
             <img src=".//assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         </div>
         <div class="menu__header content padding__20">
-            <h2>A la Française </h2>
+            <h2>La palette du goût</h2>
             <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
         <div class="menu__container content">
@@ -33,11 +33,11 @@
                 <div class="menu__card anim-1">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Fricassée d'escargot</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text"><p>Au piment d'Espelette<p></span>
+                            <span class="menu__card-price"><p>25€</p></span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
