--- a/menu_1.html
+++ b/menu_1.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -13,21 +14,25 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
         <div class="header">
             <div class="return"><a href="./index.html"><i class="fas fa-arrow-left"></i></a></div>
             <h1>ohmyfood</h1>
         </div>
+        <!-- BACKGROUND -->
+        <div class="background__cover">
+            <img src=".//assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        </div>
     </header>
     <main>
-        <div class="background__cover">
-            <img src=".//assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-        </div>
+        <!-- MENU -->
         <div class="menu__header content padding__20">
             <h2>La palette du goût</h2>
             <div class="like-icon"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
         <div class="menu__container content">
+            <!-- PREMIERE COLONNE -->
             <div class="menu__column">
                 <h3>ENTREES</h3>
                 <div class="menu__card anim-1">
@@ -36,8 +41,8 @@
                             <h4>Fricassée d'escargot</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text"><p>Au piment d'Espelette<p></span>
-                            <span class="menu__card-price"><p>25€</p></span>
+                            <span class="menu__card-text">Au piment d'Espelette</span>
+                            <span class="menu__card-price">25€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -45,11 +50,12 @@
                 <div class="menu__card anim-2">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Foie gras de canard mi-cuit
+                            </h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Et ses copeaux de truffe noire</span>
+                            <span class="menu__card-price">35€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -57,28 +63,27 @@
                 <div class="menu__card anim-3">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Oeuf au plat</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Assaisonné à la truffe sur lit de caviar</span>
+                            <span class="menu__card-price">20€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
-
-            <!-- colonne 2 -->
+            <!-- DEUXIEME COLONNE -->
             <div class="menu__column">
                 <h3>PLATS</h3>
                 <div class="menu__card anim-4">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Filet de boeuf aux herbes</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Accompagné de sa ribambelle de légumes</span>
+                            <span class="menu__card-price">40€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -86,11 +91,11 @@
                 <div class="menu__card anim-5">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Parmentier de queue de boeuf</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">À la truffe noire sur sa purée de panais</span>
+                            <span class="menu__card-price">35€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -98,27 +103,27 @@
                 <div class="menu__card anim-6">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Filet de turbot</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Aux agrumes</span>
+                            <span class="menu__card-price">44€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
-            <!--colonne 3-->
+            <!-- TROISIEME COLONNE -->
             <div class="menu__column">
                 <h3>DESSERTS</h3>
                 <div class="menu__card anim-7">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Paris-Brest</h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Revisité</span>
+                            <span class="menu__card-price">18€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -126,11 +131,11 @@
                 <div class="menu__card anim-8">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Macaron au chocolat d'exception </h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Et glace à la vanille de Madagascar</span>
+                            <span class="menu__card-price">22€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
@@ -138,26 +143,27 @@
                 <div class="menu__card anim-9">
                     <div class="menu__card-container">
                         <div class="menu__card-title">
-                            <h4>Tartare de poulpes acidulé</h4>
+                            <h4>Mousse au chocolat </h4>
                         </div>
                         <div class="menu__card-footer">
-                            <span class="menu__card-text">Aux zests d'orange</span>
-                            <span class="menu__card-price">25€</span>
+                            <span class="menu__card-text">Au piment d'Espelette et à la truffe noire</span>
+                            <span class="menu__card-price">23€</span>
                         </div>
                     </div>
                     <div class="menu__card-animation"><i class="fas fa-check-circle"></i></div>
                 </div>
             </div>
-
         </div>
+        <!-- COMMANDER -->
         <div class="menu__command content">
             <a href="#">
                 <div class="reservation__button">
-                    <p>Commander</p>
+                    <p class="margin__0">Commander</p>
                 </div>
             </a>
         </div>
     </main>
+    <!-- FOOTER -->
     <footer>
         <div class="content">
             <div class="footer__bloc">
@@ -172,7 +178,7 @@
                     <a href="#">
                         <li>Mention légales</li>
                     </a>
-                    <a href="#">
+                    <a href="mailto:#">
                         <li>Contact</li>
                     </a>
                 </ul>
