Finalisation animation menu

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -16,9 +16,10 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div class="header">
+        <div class="header__menu">
             <div class="return"><a href="./index.html"><i class="fas fa-arrow-left"></i></a></div>
             <h1>ohmyfood</h1>
+            <div class="block__invisible"></div>
         </div>
         <!-- BACKGROUND -->
         <div class="background__cover">
