--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <h2>Restaurants</h2>
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
-                        <a href="menu_1.html">
+                        <a href="la-palette-du-gout.html">
                             <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
-                                <a href="/menu_1.html">
+                                <a href="/la-palette-du-gout.html">
                                     <h4>La palette du goût</h4>
                                     <P>Menilmontant</P>
                                 </a>
