--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
         <div class="reservation">
             <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <p class="reservation__text">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <a href="#">
                 <div class="reservation__button">
                     <p>Exloprer nos restaurants</p>
                 </div>
             </a>
         </div>
-        <div class="presentation content">
+        <div class="presentation content padding__20">
             <h2>Fonctionnement</h2>
             <div class="presentation__container">
                 <div class="presentation__card">
