--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -170,18 +170,10 @@
             <div class="footer__bloc">
                 <h3 class="footer__title">ohmyfood</h3>
                 <ul>
-                    <a href="#">
-                        <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-                    </a>
-                    <a href="#">
-                        <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
-                    </a>
-                    <a href="#">
-                        <li>Mention légales</li>
-                    </a>
-                    <a href="mailto:#">
-                        <li>Contact</li>
-                    </a>
+                    <li> <a href="#"> <i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                    <li> <a href="#"> <i class="fas fa-hands-helping"></i> Devenir Partenaire</a></li>
+                    <li> <a href="#"> Mention légales</a></li>
+                    <li> <a href="#"> Contact</a></li>
                 </ul>
             </div>
         </div>
