Finalisation (problème position relative !)

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
                         <a href="la-palette-du-gout.html">
+                            <span class="card__new">Nouveau</span>
                             <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
@@ -95,12 +96,13 @@
                         </div>
                     </div>
                     <div class="restaurant__card">
-                        <a href="#">
+                        <a href="./la-note-enchantee.html">
+                            <span class="card__new">Nouveau</span>
                             <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
-                                <a href="#">
+                                <a href="./la-note-enchantee.html">
                                     <h4>La note enchantée</h4>
                                     <P>Charonne</P>
                                 </a>
@@ -109,12 +111,12 @@
                         </div>
                     </div>
                     <div class="restaurant__card">
-                        <a href="#">
+                        <a href="./a-la-francaise.html">
                             <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
-                                <a href="#">
+                                <a href="./a-la-francaise.html">
                                     <h4>À la française</h4>
                                     <P>Cité Rouge</P>
                                 </a>
@@ -123,13 +125,13 @@
                         </div>
                     </div>
                     <div class="restaurant__card">
-                        <a href="#">
+                        <a href="./le-delice-des-sens.html">
                             <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
-                                <a href="#">
+                                <a href="./le-delice-des-sens.html">
                                     <h4>Le délice des sens</h4>
                                     <P>Folie-Méricourt</P>
                                 </a>
