Correction lien contact

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <li> <a href="#"> <i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
                     <li> <a href="#"> <i class="fas fa-hands-helping"></i> Devenir Partenaire</a></li>
                     <li> <a href="#"> Mention légales</a></li>
-                    <li> <a href="#"> Contact</a></li>
+                    <li> <a href="mailto:#"> Contact</a></li>
                 </ul>
             </div>
         </div>
